[package]
name = "chakana"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.7"
bevy_rapier2d = { version = "*", features = ["parallel", "debug-render"] }
ron = "*"
serde = { version="1.0", features=["derive"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3